syntax = "proto3";

package some.v1;
// package api.some.v1;

option go_package = "github.com/zerospiel/proto_workshop";
// option go_package = "github.com/zerospiel/proto_workshop/insoncistent";

message FooBar {
    int32 itt = 1;
    int64 isf = 2;
    oneof foo {
        string name = 3;
        sint32 id = 4;
    }
}